[package]
name = "c4id"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "C4 ID implementation for SMPTE ST 2114:2017"
repository = "https://github.com/x43romp/c4id"
homepage = "https://github.com/x43romp/c4id"
readme = "README.md"
categories = ["algorithms", "cryptography"]

[lib]
name = "c4id"
path = "src/lib.rs"

[dependencies]
bs58 = "0.5.1"
sha2 = "0.10.9"
